# GLM-V

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
glmv_reward/: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml  ruff.toml
glmv_reward/configs/: full_config.yaml
glmv_reward/examples/: reward_system_demo.py
glmv_reward/examples/configs/: example.yaml.template
glmv_reward/resources/: WECHAT.md
glmv_reward/scripts/gui_agent/: AndroidWorld.py  OSWorld.py  WebVoyager.py
glmv_reward/src/glmv_reward/: __init__.py  reward_system.py
glmv_reward/src/glmv_reward/configs/: __init__.py  reward_system.py
glmv_reward/tests/: conftest.py
glmv_reward/tests/chart/: test_chart_verifier.py
glmv_reward/tests/cogagent/: test_android_world_verifier.py  test_osworld_verifier.py  test_webvoyager_verifier.py
glmv_reward/tests/counting/: test_counting.py
glmv_reward/tests/general/: test_counting_verifier.py  test_general_reward_model.py  test_general_verifier.py  test_general_verifier_math.py  test_perception_verifier.py
glmv_reward/tests/geoquest/: test_geoquest.py
glmv_reward/tests/language_mix/: test_language_mix.py
glmv_reward/tests/mmsi/: test_mmsi_verifier.py
glmv_reward/tests/multi_image/: test_multi_image_general_verifier.py
glmv_reward/tests/ocr/: test_ocr_verifier.py
glmv_reward/tests/stem/: test_chemistry_verifier.py  test_logic_verifer.py  test_logic_verifier.py  test_math_verifier.py  test_physics_verifier.py
glmv_reward/tests/vqa/: test_vqa_verifier.py
(+117 files in other folders)
